# wolpacket

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
scripts/: check-rust-version.py
wolpacket/: Cargo.toml
wolpacket-core/: Cargo.toml
wolpacket-core/src/: lib.rs
wolpacket/src/: app.rs  main.rs  ui.rs
