[package]
name = "wolpacket-core"
description = "Construct and send Wake-on-LAN magic packets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
macaddr.workspace = true
thiserror.workspace = true
tracing.workspace = true
